--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "~13.0.2",
     "expo-module-scripts": "^3.5.2",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "^6.7.2",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-linear-gradient": "^2.3.1",
     "@types/react-native-onboarding-swiper": "^1.1.9",
     "@types/react-native-vector-icons": "^6.4.18"
   },
