--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-vector-icons": "^10.1.0",
     "typescript": "~5.3.3",
-    "use-latest-callback": "^0.2.1"
+    "use-latest-callback": "^0.2.1",
+    "react-native-safe-area-context": "4.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
