--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -17,16 +18,17 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-module-scripts": "^3.5.2",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.13.0",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "^0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-vector-icons": "^10.1.0",
     "typescript": "~5.3.3",
-    "use-latest-callback": "^0.2.1",
-    "react-native-safe-area-context": "4.10.5"
+    "use-latest-callback": "^0.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
