--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "movierecommend",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@supabase/supabase-js": "^2.45.3",
+    "@xenova/transformers": "^2.17.2",
     "expo": "~51.0.28",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "~13.0.2",
@@ -20,8 +21,10 @@
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.0",
     "lottie-react-native": "^6.7.2",
+    "metro": "^0.80.12",
+    "metro-runtime": "^0.80.12",
     "react": "18.2.0",
-    "react-native": "^0.74.5",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.10.1",
@@ -35,7 +38,9 @@
     "@types/react-native": "^0.72.8",
     "@types/react-native-linear-gradient": "^2.3.1",
     "@types/react-native-onboarding-swiper": "^1.1.9",
-    "@types/react-native-vector-icons": "^6.4.18"
+    "@types/react-native-vector-icons": "^6.4.18",
+    "babel-plugin-transform-import-meta": "^2.2.1"
   },
-  "private": true
+  "private": true,
+  "type": "module"
 }
