--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "react",
     "strict": true,
     "noImplicitAny": false
-  }
+  },
+  "include": ["src", "node_modules/@types"]
 }
