--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@types/react-native-linear-gradient": "^2.3.1",
     "@types/react-native-onboarding-swiper": "^1.1.9",
     "@types/react-native-vector-icons": "^6.4.18",
-    "babel-plugin-transform-import-meta": "^2.2.1"
+    "babel-plugin-transform-import-meta": "^2.2.1",
+    "supabase": "^1.191.3"
   },
-  "private": true,
-  "type": "module"
+  "private": true
 }
