--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-vector-icons": "^10.1.0",
     "typescript": "~5.3.3",
-    "use-latest-callback": "^0.2.1"
+    "use-latest-callback": "^0.2.1",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
