--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,7 +109,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.movierecommend"
+    namespace 'com.adormantsakthi.swipeformovie'
     defaultConfig {
         applicationId 'com.adormantsakthi.swipeformovie'
         minSdkVersion rootProject.ext.minSdkVersion
@@ -124,6 +124,13 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            storeFile file('../your-release-key.keystore')
+            storePassword 'sakthi2004'
+            keyAlias 'your-key-alias'
+            keyPassword 'sakthi2004'
+        }
     }
     buildTypes {
         debug {
@@ -132,7 +139,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
