--- a/package.json
+++ b/package.json
@@ -8,38 +8,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/slider": "^4.5.3",
-    "@react-native-picker/picker": "^2.8.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/slider": "4.5.2",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@supabase/supabase-js": "^2.45.3",
     "@xenova/transformers": "^2.17.2",
-    "expo": "~51.0.28",
-    "expo-font": "~12.0.9",
+    "expo": "~51.0.36",
+    "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-module-scripts": "^3.5.2",
+    "expo-modules-core": "~1.12.25",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.0",
-    "lottie-react-native": "^6.7.2",
-    "metro": "^0.80.12",
+    "lottie-react-native": "6.7.0",
+    "metro": "~0.80.8",
     "metro-runtime": "^0.80.12",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-webview": "13.8.6",
+    "react-native-youtube-iframe": "^2.3.0",
     "typescript": "~5.3.3",
-    "use-latest-callback": "^0.2.1",
-    "expo-image-picker": "~15.0.7"
+    "use-latest-callback": "^0.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react-native": "^0.72.8",
+    "@babel/core": "^7.24.0",
     "@types/react-native-linear-gradient": "^2.3.1",
     "@types/react-native-onboarding-swiper": "^1.1.9",
     "@types/react-native-vector-icons": "^6.4.18",
